--- a/css/mobile.css
+++ b/css/mobile.css
@@ -42,6 +42,7 @@ body {
 header,
 footer {
     background-color: var(--light-green);
+    text-align: right;
 }
 
 .header-logo {
@@ -79,7 +80,7 @@ footer {
     background-color: var(--light-green);
     color: var(--white);
     border-color: var(--dark-red);
-    border-radius: 2rem;
+    border-radius: 30px;
     font-size: 1.7rem;
     padding: 0.6% 3%;
 }
@@ -107,9 +108,20 @@ main div {
     min-height: 150px;
     margin: 0.5%;
     border: solid 0.3rem var(--dark-red);
+    border-radius: 30px;
     padding: 0.5%;
 }
 
+.submit {
+    margin-top: 6%;
+    min-height: 20%;
+    height: 35px;
+    background-color: var(--dark-red);
+    color: var(--white);
+    font-weight: bold;
+    font-size: x-large;
+
+}
 
 /* ----------------- */
 
@@ -195,7 +207,7 @@ form {
     /* Form outline */
     padding: 1em;
     border: 0.2rem solid var(--dark-red);
-    border-radius: 2rem;
+    border-radius: 30px;
 }
 
 ul {
@@ -225,7 +237,7 @@ textarea {
     box-sizing: border-box;
     /* Match form field borders */
     border: 0.2rem solid var(--dark-red);
-    border-radius: 2rem;
+    border-radius: 30px;
 }
 
 input:focus,
